--- a/index.html
+++ b/index.html
@@ -7,50 +7,63 @@
     <title>İlk Web Sayfam</title>
 </head>
 <body>
-        <h1>Yasin KOÇ</h1>
+<h1>Yasin KOÇ</h1>
 
-        <h2>Hakkımda</h2>
-
-
-        <!--paragraf kısmı buradan başlıyor-->
+<h2>Hakkımda</h2>
 
 
-        <p>Merhaba</p>
-        <p>Her zaman ve her alanda yeni bilgiler öğrenmeye hevesliyim. Türkçe Öğretmeliği Lisansımı tamamladım. Halen Türk Dili ve Edebiyatı'nda Yüksek Lisans yapıyorum.</p>
+<!-- navbar-start-->
+<nav>
 
-        <!--paragraf ikinci kısmı buradan başlıyor-->
-        <p>Öğrenim hayatıma devam ederken "Patika" ile tanıştım. Yıllardır öğrenmek için can attığım konularda eğitim almak beni çok mutlu ediyor.</p>
+<p>Merhaba</p>
+<p>Her zaman ve her alanda yeni bilgiler öğrenmeye hevesliyim. Türkçe Öğretmeliği Lisansımı tamamladım. Halen Türk Dili ve Edebiyatı'nda Yüksek Lisans yapıyorum.</p>     
 
-        <div>
-            <!--Film ve konusu-->
-            <h2>İlgi Alanlarım</h2>
-            <ol>
-            <li><h3>En Sevdiğim Film</h3>
-            <ul>Ahlat Ağacı <strong><i>Nuri Bilge Ceylan</i></strong></ul>
-            <h4>Konusu</h4>
-            <p>Ahlat Ağacı, doğduğu kasabaya dönüp yazdığı kitabı bastıracak parayı toplamaya çalışan fakat babasının borçlarıyla karşılaşan bir gencin hikâyesini konu edinmektedir</p>
+<p>Öğrenim hayatıma devam ederken "Patika" ile tanıştım. Yıllardır öğrenmek için can attığım konularda eğitim almak beni çok mutlu ediyor.</p>
 
-            <a href="https://www.imdb.com/title/tt6628102/" title=" Filmin imdb linkine gitmek için tıklayınız." target="_blank">
-            <img src="image/Ahlat_Ağacı.jpg" alt="Ahlat Ağacı Filmi ile ilgili detaylı bilgiye burdan ulaşabilirsliniz"/></a>
+</nav>
+<!-- navbar-end-->
+<hr />
 
-            <!-- Roman ve konusu-->
-            <li><h3>En Sevdiğim Roman</h3>
-            <ul><a href="https://www.goodreads.com/book/show/220826.K_rk_Mantolu_Madonna">Kürk Mantolu Madonna</a> <strong><i>Sabahattin Ali</i></strong></ul>
-            <h4>Konusu</h4>
-            <p> Alman asıllı bir kadın olan Maria Puder ve ona aşık olan içine kapanık, melankolik, sessiz ve dış dünyaya uyum sağlayamamış bir karakter olan Havranlı Raif Efendi'nin gizli sevdasını anlatır.</p>
+<!-- content-start-->
+<main>
+<article>
+<h2>İlgi Alanlarım</h2>
+<ul>
+<li><h3>En Sevdiğim Film</h3>
+<ul>Ahlat Ağacı <strong><i>Nuri Bilge Ceylan</i></strong></ul>
+<h4>Konusu</h4>
+<p>Ahlat Ağacı, doğduğu kasabaya dönüp yazdığı kitabı bastıracak parayı toplamaya çalışan fakat babasının borçlarıyla karşılaşan bir gencin hikâyesini konu edinmektedir</p>
+<hr />
+</article>
+<article>
+<a href="https://www.imdb.com/title/tt6628102/" title=" Filmin imdb linkine gitmek için tıklayınız." target="_blank">
+<img src="image/Ahlat_Ağacı.jpg" alt="Ahlat Ağacı Filmi ile ilgili detaylı bilgiye burdan ulaşabilirsliniz"/></a>
+<hr />
+</article>
+<article>
+<ul><li><h3>En Sevdiğim Roman</h3></ul>
+<ul><a href="https://www.goodreads.com/book/show/220826.K_rk_Mantolu_Madonna">Kürk Mantolu Madonna</a> <strong><i>Sabahattin Ali</i></strong></ul>
+<h4>Konusu</h4>
+<p> Alman asıllı bir kadın olan Maria Puder ve ona aşık olan içine kapanık, melankolik, sessiz ve dış dünyaya uyum sağlayamamış bir karakter olan Havranlı Raif Efendi'nin gizli sevdasını anlatır.</p>
+<hr />
+</article>
+<article>
+<a href="https://www.goodreads.com/book/show/220826.K_rk_Mantolu_Madonna" title="Kitabın goodreads linkine gitmek için tıklayınız." target="_blank">
+<img src="image/kurk-mantolu-madonna.jpg" alt="Kürk Mantolu Madonna kitabı ile ilgili detaylı bilgiye burdan ulaşabilirsliniz"/></a>
+<hr />
+</article>
+<article>
+<ul><li><h3>En Sevdiğim Hikaye</h3></li></ul> <article>                                                
+<ul>Sırça Köşk <strong><i>Sabahattin Ali</i></strong></ul> <h4>Konusu</h4>
+<p>Tembel ve gittikleri hiçbir yerde barınamayan üç arkadaşın hikayesi anlatılır.</p>
+<hr />
+</article>
+</ul>
+</main>
+<!-- content-end-->
 
-            <a href="https://www.goodreads.com/book/show/220826.K_rk_Mantolu_Madonna" title="Kitabın goodreads linkine gitmek için tıklayınız." target="_blank">
-                <img src="image/kurk-mantolu-madonna.jpg" alt="Kürk Mantolu Madonna kitabı ile ilgili detaylı bilgiye burdan ulaşabilirsliniz"/></a>
+<!-- footer-start-->
+<nav>
 
-            <!-- Hikaye ve konusu-->
-
-            <li><h3>En Sevdiğim Hikaye</h3></li>                                                
-            <ul>Sırça Köşk <strong><i>Sabahattin Ali</i></strong></ul>
-            <h4>Konusu</h4>
-            <p>Tembel ve gittikleri hiçbir yerde barınamayan üç arkadaşın hikayesi anlatılır.</p>
-
-        </ol>
-
-        </div>
 
 </body>
