semantic tag add

--- a/index.html
+++ b/index.html
@@ -4,63 +4,68 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>İlk Web Sayfam</title>
+    <title>Ana Sayfa</title>
 </head>
 <body>
-<h1>Yasin KOÇ</h1>
-
-<h2>Hakkımda</h2>
-
 
 <!-- navbar-start-->
-<nav>
-
-<p>Merhaba</p>
-<p>Her zaman ve her alanda yeni bilgiler öğrenmeye hevesliyim. Türkçe Öğretmeliği Lisansımı tamamladım. Halen Türk Dili ve Edebiyatı'nda Yüksek Lisans yapıyorum.</p>     
-
-<p>Öğrenim hayatıma devam ederken "Patika" ile tanıştım. Yıllardır öğrenmek için can attığım konularda eğitim almak beni çok mutlu ediyor.</p>
-
-</nav>
+    <header>
+        <nav>
+            <ul>
+                <li>
+                <a href="index.html">Ana sayfa</a>
+                </li>
+                <li>
+                <a href="about-us.html">Hakkımızda</a>
+                </li>
+                <li>
+                <a href="contact.html">İletişim</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 <!-- navbar-end-->
-<hr />
 
 <!-- content-start-->
+<section>
 <main>
 <article>
-<h2>İlgi Alanlarım</h2>
-<ul>
-<li><h3>En Sevdiğim Film</h3>
-<ul>Ahlat Ağacı <strong><i>Nuri Bilge Ceylan</i></strong></ul>
-<h4>Konusu</h4>
-<p>Ahlat Ağacı, doğduğu kasabaya dönüp yazdığı kitabı bastıracak parayı toplamaya çalışan fakat babasının borçlarıyla karşılaşan bir gencin hikâyesini konu edinmektedir</p>
-<hr />
+    <h1>Yasin KOÇ</h1>
+    <h2>Hakkımda</h2>
+    <p>Merhaba</p>
+    <p>Her zaman ve her alanda yeni bilgiler öğrenmeye hevesliyim. Türkçe Öğretmeliği Lisansımı tamamladım. Halen Türk Dili ve Edebiyatı'nda Yüksek Lisans yapıyorum.</p>     
+
+    <p>Öğrenim hayatıma devam ederken "Patika" ile tanıştım. Yıllardır öğrenmek için can attığım konularda eğitim almak beni çok mutlu ediyor.</p>
+    <hr />
 </article>
 <article>
+<h2>İlgi Alanlarım</h2>
+    <ul><il><h3>En Sevdiğim Film</h3>
+        <ul>Ahlat Ağacı <strong><i>Nuri Bilge Ceylan</i></strong></ul>
+<h4>Konusu</h4>
+<p>Ahlat Ağacı, doğduğu kasabaya dönüp yazdığı kitabı bastıracak parayı toplamaya çalışan fakat babasının borçlarıyla karşılaşan bir gencin hikâyesini konu edinmektedir</p>
 <a href="https://www.imdb.com/title/tt6628102/" title=" Filmin imdb linkine gitmek için tıklayınız." target="_blank">
 <img src="image/Ahlat_Ağacı.jpg" alt="Ahlat Ağacı Filmi ile ilgili detaylı bilgiye burdan ulaşabilirsliniz"/></a>
 <hr />
-</article>
-<article>
-<ul><li><h3>En Sevdiğim Roman</h3></ul>
-<ul><a href="https://www.goodreads.com/book/show/220826.K_rk_Mantolu_Madonna">Kürk Mantolu Madonna</a> <strong><i>Sabahattin Ali</i></strong></ul>
+</article></il>
+        <il><h3>En Sevdiğim Roman</h3>
+        <ul><a href="https://www.goodreads.com/book/show/220826.K_rk_Mantolu_Madonna">Kürk Mantolu Madonna</a> <strong><i>Sabahattin Ali</i></strong>
 <h4>Konusu</h4>
 <p> Alman asıllı bir kadın olan Maria Puder ve ona aşık olan içine kapanık, melankolik, sessiz ve dış dünyaya uyum sağlayamamış bir karakter olan Havranlı Raif Efendi'nin gizli sevdasını anlatır.</p>
+    <a href="https://www.goodreads.com/book/show/220826.K_rk_Mantolu_Madonna" title="Kitabın goodreads linkine gitmek için tıklayınız." target="_blank">
+    <img src="image/kurk-mantolu-madonna.jpg" alt="Kürk Mantolu Madonna kitabı ile ilgili detaylı bilgiye burdan ulaşabilirsliniz"/></a>
 <hr />
-</article>
-<article>
-<a href="https://www.goodreads.com/book/show/220826.K_rk_Mantolu_Madonna" title="Kitabın goodreads linkine gitmek için tıklayınız." target="_blank">
-<img src="image/kurk-mantolu-madonna.jpg" alt="Kürk Mantolu Madonna kitabı ile ilgili detaylı bilgiye burdan ulaşabilirsliniz"/></a>
-<hr />
-</article>
-<article>
-<ul><li><h3>En Sevdiğim Hikaye</h3></li></ul> <article>                                                
-<ul>Sırça Köşk <strong><i>Sabahattin Ali</i></strong></ul> <h4>Konusu</h4>
+</article></il>
+        <il><h3>En Sevdiğim Hikaye</h3></li>
+            <ul>Sırça Köşk <strong><i>Sabahattin Ali</i><strong></ul>
+<h4>Konusu</h4>
 <p>Tembel ve gittikleri hiçbir yerde barınamayan üç arkadaşın hikayesi anlatılır.</p>
 <hr />
-</article>
-</ul>
+</article></il></ul>
+</section>      
 </main>
 <!-- content-end-->
+
 
 <!-- footer-start-->
 <nav>
