sweet_repices page add

--- a/about-us.html
+++ b/about-us.html
@@ -20,6 +20,9 @@
                 <li>
                 <a href="contact.html">İletişim</a>
                 </li>
+                <li>
+                <a href="sweet-recipes.html">Tatlı Tarifler</a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -53,6 +56,9 @@
                 </li>
                 <li>
                 <a href="contact.html">İletişim</a>
+                </li>
+                <li>
+                <a href="sweet-recipes.html">Tatlı Tarifler</a>
                 </li>
             </ul>
         </nav>
