--- a/sweet-recipes.html
+++ b/sweet-recipes.html
@@ -33,7 +33,7 @@
         <!--Article Start-->
         <article>
             <h1>Nefis Elmalı Kurabiye</h1>
-            <img src="image/elmalıkurabiye.jpg" alt="elmalıkurabiye">
+            <img src="image/elmalikurabiye.jpg" alt="elmalıkurabiye">
             <p>Merhaba</p>
             <p>Sizlerle yapımı çok kolay keyifle yiyebileceğiniz bir kurabiye tarifi paylaşacağım.</p>
             <p>Elmalı kurabiyeyi çocuklarınız çok beğenecek.</p>
