--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,9 @@
                 <li>
                 <a href="contact.html">İletişim</a>
                 </li>
+                <li>
+                <a href="sweet-recipes.html">Tatlı Tarifler</a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -55,6 +58,9 @@
                 </li>
                 <li>
                 <a href="contact.html">İletişim</a>
+                </li>
+                <li>
+                <a href="sweet-recipes.html">Tatlı Tarifler</a>
                 </li>
             </ul>
         </nav>
